# aaha-template

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  askama.toml  build.rs  dev-watch.sh  dev.sh  watch.sh
.github/workflows/: deploy.yml  test.yml
assets/: bundle.css  manifest.webmanifest
db/: schema.sql
src/: api.rs  config.rs  db_client.rs  email.rs  error.rs  main.rs  state.rs  utils.rs
src/routes/: index.rs  mod.rs  user.rs
src/user/: auth.rs  jwt.rs  mod.rs  otp.rs
styles/: _.scss  _global.scss  button.scss  footer.scss  header.scss  home_page.scss  link.scss  logo.scss  shiny.scss  top_bar.scss
templates/: layout.html
templates/components/: button.html  footer.html  header.html  link.html  tb.html
templates/layouts/: layout.html  otp_email.html
templates/page/: index.html
templates/pages/: home.html  user.html
