[package]
name = "waha-template"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3.18"
log = "0.4.21"
env_logger = "0.11.3"
dotenv = "0.15.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
memory-serve = "0.4.5"

[build-dependencies]
grass = "0.13.2"
glob = "0.3.1"
lightningcss = "1.0.0-alpha.55"
