[package]
name = "aaha-template"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { git = "https://github.com/djc/askama", rev = "eec57523103e8455961b27c68510c190ed03260d" }
askama_axum = { git = "https://github.com/djc/askama", rev = "eec57523103e8455961b27c68510c190ed03260d" }
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3.18"
log = "0.4.21"
env_logger = "0.11.3"
dotenv = "0.15.0"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
memory-serve = "0.4.5"
once_cell = "1.19.0"
eyre = "0.6.12"
thiserror = "1.0.59"

[build-dependencies]
grass = "0.13.2"
glob = "0.3.1"
lightningcss = "1.0.0-alpha.55"
